Tweaked timeline spacing/sizing. Gave timeline entries fixed positions

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,12 +1,14 @@
+#story section {
+   padding-top: 2em;
+}
+
 #timeline-container {
    position: relative;
-   margin-left: 5%;
-   width: 90%;
 }
 
 #timeline {
    position: absolute;
-   left: 25%;
+   left: 22%;
    transform: translateX(-50%);
    width: 5px;
    background-color: black;
@@ -20,7 +22,7 @@
 .dot {
    width: 15px;
    height: 15px;
-   left: 25%;
+   left: 22%;
    transform: translate(-50%, -50%);
    border: 3px black solid;
    border-radius: 100%;
@@ -29,25 +31,49 @@
 
 .line {
    z-index: 0;
-   height: 3px;
-   left: 25%;
+   height: 2px;
+   left: 22%;
    background-color: black;
 }
 
+ .line.column1 {
+    width: 2%;
+ }
+ 
+ .line.column2 {
+    width: 27.5%;
+ }
+ 
+ .line.column3 {
+    width: 53.5%;
+ }
+
 .date {
-   right: 75%;
+   right: 80%;
    font-family: 'Architects Daughter', cursive;
    font-size: 20px;
    font-weight: bold;
-   padding: 1em;
 }
 
 .event {
    z-index: 1;
-   max-width: 30%;
+   max-width: 25.5%;
    padding: 0 1em;
    transform: translateY(-17px);
+   text-align: left;
 }
+
+ .event.column1 {
+    left: 23%;
+ }
+ 
+ .event.column2 {
+    left: 48.75%;
+ }
+ 
+ .event.column3 {
+    left: 74.5%;
+ }
 
    .event .title {
       font-weight: bold;
